--- a/player.html
+++ b/player.html
@@ -80,10 +80,34 @@ body {
 		border-bottom: 0;
 	}
 }
+.profile {
+	position: absolute;
+	right: 4rem;
+	top: 4rem;
+	display: flex;
+}
+
+.profile-image {
+	width: 5rem;
+	height: 5rem;
+	border-radius: 2px;
+	padding: 1rem;
+}
+.profile-text {
+	color: #444444;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 </style>
 </head>
 <body>
-
+	<div class="list-group" id="events" style="width:20%;position: absolute;top: 17.2%; left:2%">
+	</div>
+	<div class="profile">
+		<img src="user.jpg" alt="" class="profile-image">
+		<div class="profile-text">Alphadose</div>
+	</div>
 	<div class="container">
 		<div class="header clearfix">
 			<h3 class="text-muted">Play Stream</h3>
@@ -95,7 +119,7 @@ body {
  				src="play.html?name=" frameborder="0" allowfullscreen></iframe>
 			<br />
 			<div class="input-group col-sm-offset-2 col-sm-8">
-				<input type="text" class="form-control" value="stream1"
+				<input type="text" class="form-control" value=""
 					id="streamName" placeholder="Type stream name"> <span
 					class="input-group-btn">
 					<button onclick="start()" class="btn btn-default">Play</button>
@@ -109,8 +133,8 @@ body {
 
 
 	<script>
-		function start() {
-			var streamName = $("#streamName").val();
+		function start(streamName) {
+			console.log(streamName)
 			fetch("streams/" + streamName + ".m3u8", {
 				method : 'HEAD'
 			})
@@ -129,10 +153,27 @@ body {
 
 							});
 		}
-
+		
 		function stop() {
 			$("#embedded_player").attr("src", "play.html?name=");
 		}
+		fetch('https://cors-anywhere.herokuapp.com/http://shaddygarg.pythonanywhere.com/events/?format=json')
+		.then((res) => res.json())
+		.then((body) => {
+			console.log(body)
+			console.log(body.length)
+			for(var i=0;i<body.length;i++) {
+				console.log(body[i].name)
+				$(".list-group").append('<a href="#" class="list-group-item list-group-item-action">'+ body[i].name + '</a>')
+			}
+				$('#events a').on('click', function (e) {
+				e.preventDefault()
+				$('#events a').removeClass('active')
+				$(this).addClass('active')
+				$('#streamName').attr('value',$(this).text())
+				start($(this).text())
+			})
+		})
 	</script>
 </body>
 
