Added Download button

--- a/player.html
+++ b/player.html
@@ -133,6 +133,7 @@ pageEncoding="UTF-8"%>
 				<input type="text" class="form-control" value="" id="streamName" placeholder="Type stream name"> <span class="input-group-btn">
 					<button onclick="start()" class="btn btn-default">Play</button>
 					<button onclick="stop()" class="btn btn-default">Stop</button>
+					<button onclick="window.location='/WebRTCApp/downloads/file.ts'" class="btn btn-default">Download</button>
 				</span>
 			</div>
 		</div>
