Shifted out from CDN

--- a/play.html
+++ b/play.html
@@ -5,11 +5,11 @@ pageEncoding="UTF-8"%>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Ant Media Server</title>
 
-<link rel="stylesheet" href="https://releases.flowplayer.org/7.2.7/skin/skin.css">
+<link rel="stylesheet" href="/WebRTCApp/css/skin.css">
 <!-- hls.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/0.10.1/hls.light.min.js"></script>
+<script src="/WebRTCApp/js/hls.light.min.js"></script>
 <!-- flowplayer -->
-<script src="https://releases.flowplayer.org/7.2.7/flowplayer.min.js"></script>
+<script src="/WebRTCApp/js/flowplayer.min.js"></script>
 
 
 <script src="js/fetch.js"></script>
